kubernetes/clusters/home-kubernetes/apps/default/plex/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames:
    - plex.home.mordex.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex
          port: 32400
