kubernetes/clusters/home-kubernetes/apps/default/plex/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.home.mordex.io`)
      kind: Rule
      services:
        - name: plex
          port: 32400
  # tls:
  #   secretName: home-mordex-io-tls
